test/Fail/UnquoteDeclHelperNotDefined.err
UnquoteDeclHelperNotDefined.agda:9.1-13.47: error: [Unquote.MissingDefinition]
Missing definition for UnquoteDeclHelperNotDefined.aux
